ubiquity-slideshow-ubuntu (101) UNRELEASED; urgency=medium

  [ David Pires ]
  * Update Xubuntu slideshow content for 15.10.

 -- Pasi Lallinaho <pasi@shimmerproject.org>  Sat, 05 Sep 2015 00:17:42 +0300

ubiquity-slideshow-ubuntu (100) wily; urgency=medium

  * Add references and screenshot for Ubuntu MATE Welcome.
    (changes from Martin Wimpress)

 -- Mathieu Trudel-Lapierre <mathieu-tl@ubuntu.com>  Mon, 31 Aug 2015 13:37:45 -0400

ubiquity-slideshow-ubuntu (99) wily; urgency=medium

  * Update slideshow for Ubuntu GNOME 15.10 

 -- Tim Lunn <tim@feathertop.org>  Sun, 30 Aug 2015 17:25:37 +1000

ubiquity-slideshow-ubuntu (98) wily; urgency=medium

  [ Martin Wimpress ]
  * A few minor changes to the text in the Ubuntu MATE slides to remove
    an errant scroll-bar and tweak up the language.

 -- Didier Roche <didrocks@ubuntu.com>  Tue, 26 May 2015 10:59:53 +0200

ubiquity-slideshow-ubuntu (97) vivid; urgency=medium

  [ Dylan McCall ]
  * Translation updates from Launchpad

  [ Aron Xu ]
  * Update screenshots pictures for Ubuntu Kylin 15.04

  [ Tim Lunn ]
  * Update screenshots for Ubuntu GNOME

  [ Adam Conrad ]
  * Update Ubuntu wallpaper and evolve the unicorn into a vervet.

 -- Adam Conrad <adconrad@ubuntu.com>  Mon, 20 Apr 2015 12:21:03 +0100

ubiquity-slideshow-ubuntu (96) vivid; urgency=medium

  * Fix kubuntu slideshow missing first image LP: #1436949

 -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 01 Apr 2015 14:10:58 +0200

ubiquity-slideshow-ubuntu (95) vivid; urgency=medium

  * Fix kubuntu slideshow missing final image LP: #1436949

 -- Jonathan Riddell <jriddell@ubuntu.com>  Fri, 27 Mar 2015 13:22:05 +0100

ubiquity-slideshow-ubuntu (94) vivid; urgency=medium

  [ Jack Fromm ]
  * Minor copy tweaks for Xubuntu

  [ Dylan McCall ]
  * Include source for jquery and jquery.cycle. Minify at build time.
  * Get rid of the old twitter.js: waste of space at this point, sadly.
  * Remove deprecated .live method in xubuntu.js: use .on, instead.
