@@ -1,4 +1,4 @@
-<div>
+<div id="werewolf">
 
 	<div class="header">
 		<h1>Thank you!</h1>
