@@ -3,6 +3,10 @@ ubiquity-slideshow-ubuntu (101) UNRELEASED; urgency=medium
   [ David Pires ]
   * Update Xubuntu slideshow content for 15.10.
 
+  [ Pasi Lallinaho ]
+  * Use a CSS gradient for the background in the Xubuntu slide; no need for images any more.
+  * Add werewolfy art for the closing slide for Xubuntu.
+
  -- Pasi Lallinaho <pasi@shimmerproject.org>  Sat, 05 Sep 2015 00:17:42 +0300
 
 ubiquity-slideshow-ubuntu (100) wily; urgency=medium
